appId: com.webkul.Ammar StoreApp.iOS
---
- launchApp
- tapOn:
    text: "Account"
- assertVisible:
    text: "Sign Up"
- assertVisible:
    text: "Login"
- tapOn:
    text: "Login"
- assertVisible:
    text: "Email"

